04-Feb-2013 Added Opus.Core.IForwardDependenciesOn, which if used on a module type, will forward all of it's dependencies onto parent nodes. For example, if a C.StaticLibrary is dependent upon another StaticLibrary, that dependency is not used until an application links the first library. Then both are required to satisfy symbol requirements.

04-Feb-2013 Simplified the logic in creating an Opus.Core.DependencyNode from a module type, by moving that logic to the ModuleFactory.

31-Jan-2013 Adding IncrementalLink boolean option to VisualCCommon.ILinkerOptions.

29-Jan-2013 Restoring response file support for valid Gcc versions.

29-Jan-2013 Adding Opus.Core.ToolAndOptionType class, as a helper for constructing IToolsets. Updated Clang, ComposerXE, Mingw and VisualC toolsets to use the new class.

26-Jan-2013 Fixing VisualStudio 2005 and 2008 selection of Express or Professional versions for VSSolution builds.

25-Jan-2013 Implemented C.ICharacterSet options. These just set #defines (_UNICODE,UNICODE) and _MBCS on the compiler options.

25-Jan-2013 Adding option '-noresponsefiles' when using command line builds to exclude the use of response files (assuming the tools used support them).

24-Jan-2013 Released 0.50 Alpha 1

24-Jan-2013 Removing obsolete API
 - Opus.Core.DirectoryCollection.Add
 - Opus.Core.FileCollection.AddRelativePaths
 - C.CxxObjectFileCollection.AddRelativePaths
 - C.ObjectFileCollection.AddRelativePaths
 - QtCommon.MocFileCollection.AddRelativePaths

23-Jan-2013 AssemblyVersion is now auto-incrementing. AssemblyInformationVersion is set to the current version.

23-Jan-2013 Removed notoolchain.rsp from the testpackages directory, and removed references to it in the test harness.

23-Jan-2013 Unit test Python scripts now accept an option to exclude some response files. E.g. if you don't have Mingw installed on your Windows box, then tests specifically for that toolchain can be excluded.
